Refs #21931; Fixed layout problems on facets

--- a/webapps/aqstats/public/stylesheets/facetview.css
+++ b/webapps/aqstats/public/stylesheets/facetview.css
@@ -75,3 +75,9 @@
     margin:0 5px 0 5px;
 }
 
+
+.facetview_filters.table .facetview_filtervalue .facetview_filterchoice{
+    display:block;
+    word-wrap:break-word;
+    max-width:224px;
+}
